# grid-stix

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  NOTICE  README.md  catalog.xml  environment.yml  fix_and_validate.py  fix_final_refs.py  fix_property_domains.py  fix_property_references.py  fix_remaining_refs.py  ontology_checker.py  owl_to_html.py  pyproject.toml  pytest.ini  setup.py
python/: pyproject.toml
python/grid_stix/: base.py
python/grid_stix/assets/: ControlCenter.py  DistributionLine.py  ElectronicSecurityPerimeter.py  Generator.py  GridComponent.py  OTDevice.py  OperationalGridEntity.py  PhysicalAsset.py  PhysicalGridAsset.py  PhysicalSecurityPerimeter.py  SecurityZone.py  Substation.py  Supplier.py  SupplyChainRisk.py  Transformer.py  TransmissionLine.py  __init__.py
python/grid_stix/attack_patterns/: CyberAttackPattern.py  FirmwareAttackPattern.py  GridAttackPattern.py  GridMitigation.py  ImpactType.py  PhysicalAttackPattern.py  ProtocolAttackPattern.py  SocialEngineeringAttackPattern.py  __init__.py
python/grid_stix/components/: AdvancedMeteringNetwork.py  AmiHeadEndSystem.py  BatteryEnergyStorageSystem.py  CentralizedGenerationFacility.py  ChargingConnector.py  DERMS.py  DerAggregator.py  DerCommunicationInterface.py  DerController.py  DerDevice.py  DerFirmware.py  DerNetworkInterface.py  DerOperator.py  DerOwner.py  DerScada.py  DerSystem.py  DerUser.py  DistributedEnergyResource.py  DistributionAsset.py  DistributionManagementSystem.py  EdgeIntelligentDevice.py  ElectricVehicle.py  EnergyMeterEvse.py  (+32 more)
(+208 files in other folders)
