[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-stix"
version = "2.1.0"
requires-python = ">=3.11"
dependencies = [
    "stix2>=3.0.0",
]
description = "Grid-STIX 2.1 Electrical Grid Cybersecurity Ontology Python Library"
readme = "../README.md"
license = {text = "GPL-3.0"}

[tool.setuptools.packages.find]
where = ["."]
include = ["grid_stix*"]
